--- a/src/styles/format.css
+++ b/src/styles/format.css
@@ -37,7 +37,6 @@
 }
 
 .sup-bar {
-    background-color: aqua;
     height: 8vh;
     width: 50vw;
     display: flex;
@@ -47,7 +46,6 @@
 }
 
 .comp-content {
-    background-color: antiquewhite;
     height: 84vh;
     width: 50vw;
     display: flex;
@@ -57,11 +55,14 @@
 }
 
 .down-bar {
-    background-color: rgb(187, 187, 27);
     height: 8vh;
     width: 50vw;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: left;
+}
+
+.w-container {
+    width: 35vw;
 }
